Bug 69207 - Text delimiter not used in preview until changed (CSV import OK)
Summary: Text delimiter not used in preview until changed (CSV import OK)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: Other All
: medium minor
Assignee: Andreas Heinisch
URL:
Whiteboard: target:7.3.0 target:7.2.0.0.beta2
Keywords:
: 132980 (view as bug list)
Depends on:
Blocks: CSV-Dialog
  Show dependency treegraph
 
Reported: 2013-09-11 07:45 UTC by Dotan Cohen
Modified: 2021-06-26 11:09 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Test document (38 bytes, text/csv)
2013-09-11 07:47 UTC, Dotan Cohen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dotan Cohen 2013-09-11 07:45:53 UTC
When opening a CSV document with single-quote text delimiter, the Text Import dialogue's preview is only updated when changing the text delimiter option.

Steps to reproduce:
1) Open a CSV file with a single-quote text delimiter.
2) In the Text Import dialogue, change the configured text delimiter to '
3) Click OK
4) When the document opens, close it.
5) Reopen the document.

What happens:
The text delimiter is properly configured as ', but the preview shows the ' characters in the text.

Further steps:
6) Change the text delimiter to double quote.
7) Change the text delimiter back to single quote.

What happens:
Now the preview is shown correctly without the quote characters in the text.


Notice that this bug only affects the preview. Pressing OK opens the document properly.
Comment 1 Dotan Cohen 2013-09-11 07:47:57 UTC
Created attachment 85606 [details]
Test document

This is a test document which demonstrates the bug.
Comment 2 A (Andy) 2013-12-28 21:29:37 UTC
reproducible with LO 4.1.4.2 (Win8)
Comment 3 QA Administrators 2015-04-19 03:23:37 UTC Comment hidden (obsolete)
Comment 4 Dotan Cohen 2015-04-19 10:36:57 UTC
This bug is still present in LibreOffice 4.3.
Comment 5 Dominik Seitz 2016-09-06 09:04:44 UTC
reproducible with 5.2.0.4 (Win7 x64)
Comment 6 Xisco Faulí 2017-09-29 08:53:53 UTC Comment hidden (obsolete)
Comment 7 Timur 2019-04-22 09:27:43 UTC
Repro 6.3+. I change to Trivial.
Comment 8 Timur 2020-06-11 11:02:48 UTC
*** Bug 132980 has been marked as a duplicate of this bug. ***
Comment 9 Commit Notification 2021-06-24 07:57:01 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6d30c51f1f69d8c31b30b4e08a97222363852b17

tdf#69207 - Use selected text delimiter to parse the provided csv data

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2021-06-24 15:25:16 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/14af6ffe303090eecd2b42b09da42e5a748cbb9d

tdf#69207 - Use selected text delimiter to parse the provided csv data

It will be available in 7.2.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 BogdanB 2021-06-26 11:09:12 UTC
It's ok now. Verified in
Version: 7.3.0.0.alpha0+ / LibreOffice Community
Build ID: f446a203fa2897bab8ae7686c948a8bf060675c6
CPU threads: 4; OS: Linux 5.8; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2021-06-24_15:16:38
Calc: threaded