tdf#69207 - Use selected text delimiter to parse the provided csv data

Change-Id: Ie260cb57956cd450398746c7f51629d37d14a324
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/117750
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>
(cherry picked from commit 6d30c51f1f69d8c31b30b4e08a97222363852b17)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/117724
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>